Testing/MatrixClassTests/resolvingMatrixFunctions/transpose/Debug/com_transpose_refc.txt
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Domain/Domain_initDomain.o Domain/Domain_initDomain.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_declarations.o Global/Global_declarations.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_initGlobals.o Global/Global_initGlobals.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o User/User_main.o User/User_main.cpp
User/User_main.cpp: In function ‘int main(int, char**)’:
User/User_main.cpp:9:2: error: ‘compare’ was not declared in this scope
  compare(m1_trans, m1_trans_sol, prec);
  ^~~~~~~
<builtin>: recipe for target 'User/User_main.o' failed
make: *** [User/User_main.o] Error 1
